--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@
 # The above will handle all files NOT found below
 #
 # These files are text and should be normalized (Convert crlf => lf)
+*.gitattributes .rtf
 *.gitattributes text
 .gitignore      text
 *.md            text
