--- a/.gitattributes
+++ b/.gitattributes
@@ -8,7 +8,7 @@
 # The above will handle all files NOT found below
 #
 # These files are text and should be normalized (Convert crlf => lf)
-*.rtf           text
+*.rtf           diff=astextplain
 *.gitattributes text
 .gitignore      text
 *.md            text
